--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="enter.enter_engineering_test">
+    <uses-permission android:name="android.permission.INTERNET" />
    <application
         android:label="enter_engineering_test"
         android:icon="@mipmap/ic_launcher">
