--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   horizontal_data_table: ^3.6.0
   data_table_2: ^2.2.0
   webview_flutter: ^3.0.0
+  dio: ^4.0.1
+  flutter_bloc: ^7.3.1
+  http: ^0.13.4
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
